Se comenta construccion del front en el pipline

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,23 +28,22 @@ jobs:
           cd backend
           pytest || echo "Sin pruebas definidas"
 
-      # === Etapa: Frontend ===
-      - name: Configurar Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
+      # === Etapa: Frontend (DESACTIVADA por ahora) ===
+      # - name: Configurar Node.js
+      #   uses: actions/setup-node@v4
+      #   with:
+      #     node-version: '20'
+      #
+      # - name: Instalar dependencias del frontend
+      #   run: |
+      #     cd frontend
+      #     npm install
+      #     npm run build
 
-      - name: Instalar dependencias del frontend
-        run: |
-          cd frontend
-          npm install
-          npm run build
-
-      # === Construcción Docker ===
-      - name: Build Docker images
+      # === Construcción Docker (solo backend) ===
+      - name: Build Docker image (backend)
         run: |
           docker build -t vital-backend -f docker/Dockerfile.backend .
-          docker build -t vital-frontend -f docker/Dockerfile.frontend .
 
       # === Despliegue en EC2 ===
       - name: Deploy to AWS EC2
